# ChangeLog for app-editors/mg
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/mg/ChangeLog,v 1.75 2014/03/22 23:05:38 nimiux Exp $

  22 Mar 2014; Chema Alonso <nimiux@gentoo.org> mg-20140306.ebuild:
  Stable for amd64 wrt bug #504870

  22 Mar 2014; Markus Meier <maekke@gentoo.org> mg-20140306.ebuild:
  add ~arm, bug #503224

  20 Mar 2014; Jeroen Roovers <jer@gentoo.org> mg-20140306.ebuild:
  Stable for HPPA (bug #504870).

  13 Mar 2014; Ulrich Müller <ulm@gentoo.org> -mg-20131118.ebuild,
  -mg-20140220.ebuild, -files/mg-20140220-freebsd.patch:
  Remove intermediate versions.

*mg-20140306 (07 Mar 2014)

  07 Mar 2014; Ulrich Müller <ulm@gentoo.org> +mg-20140306.ebuild:
  Version bump.

  03 Mar 2014; Ulrich Müller <ulm@gentoo.org> mg-20140220.ebuild,
  +files/mg-20140220-freebsd.patch:
  Patch for FreeBSD, and don't depend on libbsd there. Re-add previously
  dropped ~amd64-fbsd and ~x86-fbsd keywords.

  02 Mar 2014; Jeroen Roovers <jer@gentoo.org> mg-20140220.ebuild:
  Marked ~hppa (bug #503166).

*mg-20140220 (01 Mar 2014)

  01 Mar 2014; Ulrich Müller <ulm@gentoo.org> +mg-20140220.ebuild:
  Version bump. The dev-libs/clens dependency is replaced by dev-libs/libbsd.
  Dropped some keywords again.

  13 Feb 2014; Jeroen Roovers <jer@gentoo.org> mg-20131118.ebuild:
  Stable for HPPA (bug #501184).

  13 Feb 2014; Ulrich Müller <ulm@gentoo.org> -mg-20130922-r2.ebuild,
  -files/mg-20130922-dirname.patch:
  Remove old.

*mg-20131118 (18 Nov 2013)

  18 Nov 2013; Ulrich Müller <ulm@gentoo.org> -mg-20131117.ebuild,
  +mg-20131118.ebuild:
  Version bump.

*mg-20131117 (17 Nov 2013)

  17 Nov 2013; Ulrich Müller <ulm@gentoo.org> +mg-20131117.ebuild:
  Version bump.

*mg-20130922-r2 (22 Oct 2013)

  22 Oct 2013; Ulrich Müller <ulm@gentoo.org> -mg-20130922-r1.ebuild,
  +mg-20130922-r2.ebuild, files/mg-20130922-dirname.patch:
  Replace dirname patch by the official fix from OpenBSD.
