@@ -3,18 +3,23 @@ Hash: SHA256
 
 DIST mg-20110905.tar.gz 138805 SHA256 1cd37d7e6a3eecc890a5718c38b8f38495057ba93856762a756ccee2f9618229 SHA512 b490a5a3526d35839353e138f33ac924c5afbbf7e5c9faa20ceccb82e1dc1e6a3f0726b32bac7d43dcf8a410b1b8525067da5557cf669c52a9e32d1d2f45a8a4 WHIRLPOOL 64dd179462a8c9e53946c756a4975ffd2e5bf1758a300fa699032542a6e2470f9ed03f9fe1a88ac441cf17ac20c2575f9b6c5c1c396c5a7915564fbedfb1c854
 DIST mg-20140306.tar.gz 142518 SHA256 26516bc5f3abd2b887bde0213fcdae02195c68ff776799addca1d072c37586fe SHA512 4bf62396857b2d43a99731a716cf72a2c15010ef99999cb7577f57bf1226160cc97c30ae1e787bd490521d33c08fe7a4fa9db8d999048db21d61f9a741574a17 WHIRLPOOL a7e9935e90c8854e59a9bd1e8a12909d5e3778aa14d6c0281a076ecda848a7d5cf309e94bd1137e0050c3086885b3de12a970e7d01e14d663d6551fab2761498
+DIST mg-20140406.tar.gz 142531 SHA256 c9361024af357c7ae083b6d3b3da1b23cc7bcfb62944ac966c168c86757cc480 SHA512 12835c7ff26d43b591da8c5dcc9767646e6ee90863e9be7c65398455b760adf4b2bd628e9542be6f57cffa44704e6c6334291f91f3c9678bd048d79856fe7224 WHIRLPOOL 72b57352d8a027d9e68d4fe20d75f1e59017f0f885f5141bfc818cbde7065fcf850cf2fdc41ba6a4cf41015b457761f6279287d7b4c58d180354307d64e5b291
 EBUILD mg-20110905-r1.ebuild 1219 SHA256 242469a115a7a3e9b8cad1aeeb430246f8a6fedfbe3b48f6502b3d61c6ee330e SHA512 93b4b738b468bc163f1ae5a617b4d8e76e55b83af697834cee539fdb864317b75627feb2fda55be0092d457dfb2e7e64cc630667086abef61b593dff04d69cb9 WHIRLPOOL b3ed099897c61d3b412a1f3d5105ce6b0e57ccf199d08b675e7256e72f79aa0fe3563e816e10d90afd1d0c88d0fea0bd644da3167e78a6e41fc7b543b17a9b71
 EBUILD mg-20140306.ebuild 1261 SHA256 b78a9dacb7ca9fc3547dcc0aa38cf04edd52cb23791b30f1e4f4f6a875bd3c7b SHA512 fc201d24a9963ab9e14309e48466a0a794b80e054a34413458dd31f5bd8755afd4128300ff71c48d86f9532b91484cce5b202dc4f2de7814dbb94fde2b8dfc6b WHIRLPOOL 6ca3ce316337f05a78d8fb518ff0dd51c91436e1bb03374e47bbe0a55f6a59733f3f32793cb7d98f612e8dfca167989a50db68f817b6bf7a120bee33e3ace450
-MISC ChangeLog 9123 SHA256 848c0ca99f5a4d2e04c4f9c985f8114a0c0cc2d182f4e8874c8f155de4dac8f5 SHA512 92ce59a75f5ec6bb41382a839dfcb43c50d8440b8258c5bc0fb09a371ae0e0876bdff20563598497030f0fe2346ae452a86e256ad57faf33a6f68cec328510f5 WHIRLPOOL a23ba40ae1c5b7196766c6bef75c7b49093a22ea6f506029144aefe02a043b5a715e413bbcb437994ea5b12c5ed77c5c36ccf0d82bc6fa52c9e543f2c588eba6
+EBUILD mg-20140406.ebuild 1260 SHA256 3f7cc03f1d5f547734b29803e6086e2250b5d93289fcdfa534dfa1bd808eea30 SHA512 a5413daa9d6885d3feb93e263c06f8130bdcbfcd64b96baa5c4f0075e5d90c6a57d29b720ecc61f2f88360c4fb44910859f43c35409e15c034e022afc7fde5b2 WHIRLPOOL 005021474ad81021c7a44cc7fd19a2e8ba5287d5d4fdee9c4817ac127d7dae7bfa2e043dfaf34434c64bbe7d4a7f6d08fa559a8988c825084c0c50817ae8130b
+MISC ChangeLog 9233 SHA256 6329bdea6cf289d0ca485c7f160c0a6bab8ef566d059cf53979252b8ba625399 SHA512 97a1443e974e099a582e1548fde1d57f5183c33d0a4de08acfca2b495960e2b6d98e4113df2032b0cdaf4e0be1e751d6fce6b1b79601a1bd1f1ccc77ecac97eb WHIRLPOOL d3c545855dc643a3b8228c1bdcce9a4eb0272bf00775345caf9144515c6fdd67204c7a09930cd103bf7bc53b34b8a4ee80335f6e217a856f8bd216ef1f349064
 MISC metadata.xml 291 SHA256 65d24d4c0b435503345283db1c00cc7161174eddecc4d737cbf50d924145ca6c SHA512 2ba87a6af0cc36ed2e49ded86f81a6e30b2b9ca9e73949860db9f30bac95ad7374fe1e0c5e712f3c427a8a562ceb57c9693aea967f7c134d5858aca4ec704ba2 WHIRLPOOL 604f60f36640570753ef76af4f260e3103dc8cdfbb8dc00d585d864a6ce8fc3f573a95340720d00c9ebfccc817c13065419090aad6c281a96106b423bd88bd38
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTLhd5AAoJEA2sAkrWKOU2BEYH/jk2luIsaD+jM7kIIrtAF+2P
-dUYjhlNAKFDFnkUh1p/RSrBMDYb68OLIc6Jdmr32zbExsj1RtEtPuHKbQbytU8YF
-J4VkE1aA1iZZ7MYfh+X6+HyK4tV33zVDyy9pHlTnTYj0b+7tySrSHTJWtY1IMYHq
-wLBiAIC6UtIl+55ScodoaJi3omfwqp8SCAasdnx4spuuX1n9Ls8nP2C+ijBFL7nZ
-D8StvNt5csclR4fdBOiTcG+40QOrnh3ty6D6vi0bYYWGzIZ3BL4jqp8YgSmYlUBN
-lNBUmvrPXHxYZGMiuyYOrzS1ovuSk4P9cd1lFzencR3Q2pbx+5MQqQvjNpi7bBk=
-=r1rq
+iQGcBAEBCAAGBQJTQcAOAAoJEJQzkH1pP7W4SccL/1a8Er9jJWHpRv7KbONYOStN
+WfZwwJRR5VUmO7ecGpOdlSPosIg/QXJH4VuldiqBtGZo9M0RwvQAVeRHhYxBFOFT
+DDYiKnEdIT2fSdTWFfCIGPdHas3mYZxVHCc6bbQWNu3446dCyr9Pg8RpfuHPajN6
+CXhI0ajOysGKRUyA9YaSdw3PA2YsWnDspIxos98aA5gxOouX/RKrkK8be85wgDMD
+6hjN/9mPAC/TqtXHOAw7hpJ1jK+6+lIxJ4VDpiuGDRrkqsZhXGr2+AdhrkyG7OyG
+eKVo2nfIBssR5FbVzCuBrHOj1h7+/Q231tiWJ7Ehx4JekEx/A33M/Zichzt34Go2
+FIfNnTbMORRH1uWfOVjx/9ltuAIho8MUnfxJqPptuY9cx4OlZt++i4QJsJ4gugSf
+rRGVIdalEW2AAbydraR+eGonSk/8XhNZB4bA6a97A50oYqKvXHenGGExU+OP9aol
+eJmN14amXscFo9Jj9IuI0ecF30uh+q3uio6xxHp/uA==
+=HokV
 -----END PGP SIGNATURE-----
